--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,5 @@
 
 body {
-
  // background: #F7F7F7;
  background: white;
  overflow: hidden;
@@ -9,131 +8,9 @@ body {
   text-decoration: none
 }
 
-
-.clip-wrap-polygon {
-  width: 780px;
-  height: 780px;
-  margin-left: 27%;
-  margin-top: 17%;
-}
-
-.outer-octagon {
-  margin-top: -15%;
-  width: 1200px;
-  height: 1200px;
-  margin-left: -4.25%;
-
-  .clip-wrap-polygon {
-    .left-layer {
-      // border: 1px solid red;
-      width: 250px;
-      height: 780px;
-      margin-left: 15px;
-      display: inline-block;
-
-      .clip-wrap-1 {
-        margin-top: 276px;
-        margin-left: 15px
-      }
-    }
-
-    .middle-layer {
-      // border: 1px solid blue;
-      width: 250px;
-      height: 780px;
-      margin-left: -5px;
-      display: inline-block;
-
-      .clip-wrap-2 {
-        margin-left: 14px;
-        margin-top: 0px;
-        margin-bottom: 38px;
-      }
-
-      .clip-wrap-4 {
-        margin-left: 14px;
-        margin-top: 40px;
-      }
-
-      .clip-wrap-5 {
-        margin-left: 15px;
-      }
-    }
-
-.right-layer {
-  // border: 1px solid black;
-  width: 250px;
-  height: 780px;
-  margin-left: -5px;
-  display: inline-block;
-
-  .clip-wrap-3 {
-    margin-top: 276px;
-    margin-left: 15px;
-  }
-}
-
-  .button-links {
-    font-color: linear-gradient(94deg, #93e0e1, #7888dd);
-    font-style: bold;
-    text-decoration: none;
-    margin-left: 22%;
-    margin-top: 40%;
-    z-index: 1;
-    position: absolute;
-    font-size: 1.5em;
-  }
-
-
-  .center-gradient:after {
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-
-  }
-}
-
-
-}
-
-.outer-octagon-right {
-  margin-top: -15%;
-  width: 1200px;
-  height: 1200px;
-  margin-left: 80%;
-
-  .clip-wrap-polygon {
-    width: 780px;
-    height: 780px;
-    margin-top: 17.5%;
-    margin-left: 7%;
-    opacity: .5;
-  }
-
-}
-
-
-.project-list-item {
-  margin-left: 15%;
-}
-
-.project-item-div {
-  width: 100%;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  border: 2px solid black;
-}
-
-
-
-
 .clip-each-big {
   position: relative;
 }
-
-
-
 
 
 .clip-each-big:after {
@@ -156,60 +33,6 @@ body {
   margin-bottom: -14.0px;
 }
 
-
-
-.leftsidebar {
-  position: relative;
-  width: 125px;
-  height: 125px;
-  margin-top: 15%;
-}
-
-.sidebar {
-  height: 775px;
-  margin-top: 208px;
-  width: 440px;
-  float:left;
-
-  .clip-each-home {
-    opacity: .35;
-  }
-
-  .side1 {
-    width: 200px;
-    height: 200px;
-    margin-top: -150px;
-    margin-left: 268px;
-  }
-
-  .side2 {
-    width: 200px;
-    height: 200px;
-    margin-top: 5px;
-    margin-left: 110px
-  }
-
-  .side3 {
-    width: 200px;
-    height: 200px;
-    margin-top: 65px;
-    margin-left: 70px;
-  }
-  .side4 {
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 65px;
-  }
-
-  .side5 {
-    width: 200px;
-    height: 200px;
-    margin-left: 268px;
-    margin-top: 0px;
-  }
-}
-
 .clip-each-home:after {
   content: "";
   position: absolute;
@@ -223,126 +46,382 @@ body {
   animation: AnimationName 10s ease infinite;
 }
 
-.middle:after {
-  background: #93e0e1;
+
+.clip-wrap-polygon {
+  width: 780px;
+  height: 780px;
+  margin-left: 27%;
+  margin-top: 17%;
 }
 
+.inner-clip-wrap-polygon {
+  width: 580px;
+  height: 580px;
+  margin-left: 100px;
+  margin-top: 105px;
+}
+
+.outer-octagon {
+  margin-top: -15%;
+  width: 1200px;
+  height: 1200px;
+  margin-left: -4.25%;
+
+  .clip-wrap-polygon {
+    .left-layer {
+        // border: 1px solid red;
+        width: 250px;
+        height: 780px;
+        margin-left: 15px;
+        display: inline-block;
+
+        .clip-wrap-1 {
+
+          margin-top: 276px;
+          margin-left: 15px
+        }
+      }
+
+      .middle-layer {
+        // border: 1px solid blue;
+        width: 250px;
+        height: 780px;
+        margin-left: -5px;
+        display: inline-block;
+
+        .clip-wrap-2 {
+          margin-left: 14px;
+          margin-top: 0px;
+          margin-bottom: 38px;
+        }
+
+        .clip-wrap-4 {
+          margin-left: 14px;
+          margin-top: 40px;
+        }
+
+        .clip-wrap-5 {
+          margin-left: 15px;
+        }
+      }
+
+      .right-layer {
+        // border: 1px solid black;
+        width: 250px;
+        height: 780px;
+        margin-left: -5px;
+        display: inline-block;
+
+        .clip-wrap-3 {
+          margin-top: 276px;
+          margin-left: 15px;
+        }
+      }
 
 
-.projects-container {
-  a {
-    z-index: 2;
+      .button-links {
+        font-color: linear-gradient(94deg, #93e0e1, #7888dd);
+        font-style: bold;
+        text-decoration: none;
+        margin-left: 22%;
+        margin-top: 40%;
+        z-index: 1;
+        position: absolute;
+        font-size: 1.5em;
+      }
+
+
+      .center-gradient:after {
+        top: 5px;
+        left: 5px;
+        right: 5px;
+        bottom: 5px;
+      }
+    }
+
+    .sidebar {
+      height: 775px;
+      margin-top: 208px;
+      width: 440px;
+      float:left;
+
+      .button-links {
+        font-color: linear-gradient(94deg, #93e0e1, #7888dd);
+        font-style: bold;
+        text-decoration: none;
+        margin-left: 22%;
+        margin-top: 40%;
+        z-index: 1;
+        position: absolute;
+        font-size: 1.5em;
+      }
+
+      .clip-each-home {
+        opacity: .5;
+      }
+
+      .side1 {
+        width: 200px;
+        height: 200px;
+        margin-top: -150px;
+        margin-left: 268px;
+      }
+
+      .side2 {
+        width: 200px;
+        height: 200px;
+        margin-top: 5px;
+        margin-left: 110px
+      }
+
+
+      .side3 {
+        width: 200px;
+        height: 200px;
+        margin-top: 65px;
+        margin-left: 70px;
+      }
+      .side4 {
+        width: 200px;
+        height: 200px;
+        margin-left: 100px;
+        margin-top: 65px;
+      }
+
+      .side5 {
+        width: 200px;
+        height: 200px;
+        margin-left: 268px;
+        margin-top: 0px;
+      }
+
+      .side2:hover, .side3:hover, .side4:hover {
+        opacity: 1;
+      }
+
+    }
   }
 
-  .top-container, .middle-container, .bottom-container {
-    position: relative;
-  }
+  .links-container {
+    .side {
+      width: 180px;
+      height: 180px;
+    }
 
-  .top-container:after, .middle-container:after, .bottom-container:after {
-    content: "";
-    position: absolute;
-    background: white;
-    background-size: 600% 600%;
+    .first {
+      margin-top: 235px;
+      margin-left: 50px;
+    }
 
-    -webkit-animation: AnimationName 10s ease infinite;
-    -moz-animation: AnimationName 10s ease infinite;
-    -o-animation: AnimationName 10s ease infinite;
-    animation: AnimationName 10s ease infinite;
-  }
+    .second {
+      margin-top: -395px;
+      margin-left: 310px;
+    }
 
-  .top-container {
-    width: 755px;
-    height: 723px;
-    margin-left: 10.5%;
-    top: 21px;
-  }
+    .third {
+      margin-top: 170px;
+      margin-left: 520px;
 
-  .project-one {
-    position: absolute;
-    font-size: 75px;
-    top: 9%;
-    left: 41%;
-  }
+    }
 
-  .project-two {
-    position: absolute;
-    font-size: 75px;
-    top: 59%;
-    left: 29%;
-  }
-
-  .project-three {
-    position: absolute;
-    font-size: 75px;
-    top: 77%;
-    left: 41%;
+    .fourth {
+      margin-left: 240px;
+      margin-top: -10px;
+    }
 
   }
 
-  .top-container:hover, .middle-container:hover, .bottom-container:hover {
+  .contacts-container {
+    .clip-wrap-polygon {
+      width: 325px;
+      height: 325px;
+      margin-left: 30px;
+      margin-top: 180px;
+    }
+
+    .right-top-octagon {
+      width: 250px;
+      height: 250px;
+      margin-left: 385px;
+      margin-top: 60px;
+    }
+
+
+    .octagon-bottom {
+      width: 600px !important;
+      height: 600px !important;
+      left: 110px !important;;
+      top: 155px !important;;
+      position: absolute;
+    }
+  }
+
+  .outer-octagon-right {
+    margin-top: -15%;
+    width: 1200px;
+    height: 1200px;
+    margin-left: 80%;
+
+    .clip-wrap-polygon {
+      width: 780px;
+      height: 780px;
+      margin-top: 17.5%;
+      margin-left: 7%;
+      opacity: .5;
+
+      .side {
+        width: 150px;
+        height: 150px;
+        margin-top: 310px;
+        margin-left: 25px;
+
+        .button-links {
+          font-color: linear-gradient(94deg, #93e0e1, #7888dd);
+          font-style: bold;
+          text-decoration: none;
+          margin-left: 22%;
+          margin-top: 40%;
+          z-index: 1;
+          position: absolute;
+          font-size: 1.5em;
+        }
+
+      }
+
+    }
+  }
+
+  .project-list-item {
+    margin-left: 15%;
+  }
+
+  .project-item-div {
+    width: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border: 2px solid black;
+  }
+
+
+
+  .content-container {
+    a {
+      z-index: 2;
+    }
+
+    .top-container, .middle-container, .bottom-container {
+      position: relative;
+    }
+
+    .top-container:after, .middle-container:after, .bottom-container:after {
+      content: "";
+      position: absolute;
+      background: white;
+      background-size: 600% 600%;
+
+      -webkit-animation: AnimationName 10s ease infinite;
+      -moz-animation: AnimationName 10s ease infinite;
+      -o-animation: AnimationName 10s ease infinite;
+      animation: AnimationName 10s ease infinite;
+    }
+
+    .top-container {
+      width: 720px;
+      height: 720px;
+      left: 30px;
+      top: 13px;
+
+      .project-one {
+        position: absolute;
+        font-size: 75px;
+        top: 9%;
+        left: 41%;
+      }
+    }
+
+
+    .middle-container {
+      width: 740px;
+      height: 490px;
+      top: 46px;
+      left: 20px;
+      position: absolute;
+
+
+      .project-two {
+        position: absolute;
+        font-size: 75px;
+        top: 59%;
+        left: 29%;
+      }
+    }
+
+
+    .top-container:hover, .middle-container:hover, .bottom-container:hover {
+      background: #A8DDDE;
+    }
+
+    .bottom-container {
+      width: 720px;
+      height: 725px;
+      left: 28px;
+      top: 50px;
+      position: absolute;
+
+      .project-three {
+        position: absolute;
+        font-size: 75px;
+        top: 77%;
+        left: 41%;
+
+      }
+    }
+  }
+
+
+  .clip-each, .clip-each:after, .clip-each-big, .clip-each-big:after, .clip-each-home, .clip-each-home:after {
+    -webkit-clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
+    clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
+  }
+
+  .clip-each-home:hover {
     background: #A8DDDE;
   }
 
-  .middle-container {
-    width: 752px;
-    height: 460px;
-    top: 7.8%;
-    left: 11%;
-    position: absolute;
-  }
+  .octagon-top, .octagon-top:after {
+   -webkit-clip-path: polygon(30% 0, 70% 0, 100% 30%, 0 30% , 30% 0);
+   clip-path: polygon(0 0, 70% 0, 100% 40%, 0 40% , 0 0);
+ }
 
-  .bottom-container {
-    width: 751px;
-    height: 674px;
-    margin-left: 11%;
-    top: 8%;
-    position: absolute;
-  }
-}
+ .octagon-bottom, .octagon-bottom:after {
+   -webkit-clip-path: polygon(30% 99%, 70% 99%, 100% 69%, 0 69%, 30% 99%);
+   clip-path: polygon(30% 99%, 70% 99%, 100% 69%, 0 69%, 30% 99%);
+ }
 
+ .octagon-middle, .octagon-middle:after {
+   -webkit-clip-path: polygon(0 40%, 100% 40%, 100% 100%, 0 100%);
+   clip-path: polygon(0 40%, 100% 40%, 100% 100%, 0 100%);
+ }
 
-.clip-each, .clip-each:after, .clip-each-big, .clip-each-big:after, .clip-each-home, .clip-each-home:after {
-  -webkit-clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
-  clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
-}
-
-.clip-each-home:hover {
-  background: #A8DDDE;
-}
-
-.octagon-top, .octagon-top:after {
- -webkit-clip-path: polygon(30% 0, 70% 0, 100% 30%, 0 30% , 30% 0);
- clip-path: polygon(0 0, 70% 0, 100% 40%, 0 40% , 0 0);
-}
-
-.octagon-bottom, .octagon-bottom:after {
- -webkit-clip-path: polygon(30% 100%, 70% 100%, 100% 69%, 0 69% , 30% 100%);
- clip-path: polygon(30% 100%, 70% 100%, 100% 69%, 0 69% , 30% 100%);
-}
-
-.octagon-middle, .octagon-middle:after {
- -webkit-clip-path: polygon(0 40%, 100% 40%, 100% 100%, 0 100%);
- clip-path: polygon(0 40%, 100% 40%, 100% 100%, 0 100%);
-}
-
-.clip-each-small, .clip-each-small:after, .sideOctagon, .sideOctagon:after {
+ .clip-each-small, .clip-each-small:after, .sideOctagon, .sideOctagon:after {
   -webkit-clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
   clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
 }
 
 .border-style-gradient:after {
-  top: 1.5px;
-  left: 1.5px;
-  right: 1.5px;
-  bottom: 1.5px;
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
 }
 
-.center-gradient:after {
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
+.border-style-gradient-project-middle:after {
+  top: 5px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
 }
+
 
 .center-gradient-middle:after {
   top: 5px;
@@ -351,23 +430,23 @@ body {
   bottom: 5px;
 }
 
-.border-style-gradient, .border-style-gradient-project, .border-style-gradient-project-bottom, .border-style-gradient-project-middle {
+.border-style-gradient, .border-style-gradient-project, .border-style-gradient-project-bottom, .border-style-gradient-project-middle, .border-style-gradient-project-middle {
   background: linear-gradient(94deg, #93e0e1, #7888dd);
 }
 
 .border-style-gradient-project:after {
-  top: 5px;
-  left: 8px;
-  right: 8px;
-  bottom: 28px;
+  top: 3px;
+  left: 5px;
+  right: 5px;
+  bottom: 15px;
 }
 
 .border-style-gradient-project-bottom:after {
   position: absolute;
-  top: 28px;
-  left: 8px;
-  right: 8px;
-  bottom: 5px;
+  top: 15px;
+  left: 5px;
+  right: 5px;
+  bottom: 3px;
 }
 
 .border-style-gradient-big {
@@ -380,7 +459,7 @@ body {
   top: 2.5px;
   left: 2.5px;
   right: 2.5px;
-  bottom: -0.5px;
+  bottom: 2.5px;
   z-index: -1;
 }
 
